--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br><br>
 <h3 id="number_of_objects" class="btn btn-warning"></h3>
 <br><br>
-<h3 id="staus" class="btn btn-danger"></h3>
+<h3 id="status" class="btn btn-danger"></h3>
 </center>
 <div class="copy_right_footer">Developed By Aarav Murthy</div>
 
